@@ -14,6 +14,8 @@ Version 8b
 
 --Fixed player positioning round-off errors that were causing sprite artifacts.
 
+--Changed the way that heart tokens work (drop-off when player/enemy hit).
+
 
 
 Version 8   2011-February-4
